# assist_tool

./: .gitignore  Cargo.toml  build.rs
assets/: digits.psd
assets/digits/: mask_0_35x50.rgba8  mask_1_35x50.rgba8  mask_2_35x50.rgba8  mask_3_35x50.rgba8  mask_4_35x50.rgba8  mask_5_35x50.rgba8  mask_6_35x50.rgba8  mask_7_35x50.rgba8  mask_8_35x50.rgba8  mask_9_35x50.rgba8
src/: app.rs  health_value_identifier.rs  lib.rs  main.rs
training/: capture_data.py  image_reference.py  notes.md  reference.py  test.py  train_health_model.py
training/data/: digits.psd  temp.py
training/data/generation/: .gitignore  generate_health_shields_data.py  rgba8_to_png.py  tint_image.py
training/data/generation/digits/: .gitignore  digit dimensions.txt  digits.psd  png_to_rgba8.py  rgba8_to_png.py  tint_image.py
