[package]
name = "assist_tool"
version = "0.1.0"
authors = ["Alexander Öberg"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.16.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }
scrap = "0.5.0"
rayon = "1.5.1"
[build-dependencies]
image = "0.23.14"

[features]
default = ["eframe/persistence", "serde"]

[profile.release]
opt-level = 2 # fast and small wasm

